--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -5046,6 +5046,25 @@
   journaltitle = {Target journal: New Phytologist}
 }
 
+@article{mcgregorTreeHeightLeaf2021,
+  title = {Tree Height and Leaf Drought Tolerance Traits Shape Growth Responses across Droughts in a Temperate Broadleaf Forest},
+  author = {McGregor, Ian R. and Helcoski, Ryan and Kunert, Norbert and Tepley, Alan J. and Gonzalez-Akre, Erika B. and Herrmann, Valentine and Zailaa, Joseph and Stovall, Atticus E. L. and Bourg, Norman A. and McShea, William J. and Pederson, Neil and Sack, Lawren and Anderson-Teixeira, Kristina J.},
+  date = {2021},
+  journaltitle = {New Phytologist},
+  volume = {231},
+  pages = {601--616},
+  issn = {1469-8137},
+  doi = {10.1111/nph.16996},
+  url = {http://nph.onlinelibrary.wiley.com/doi/abs/10.1111/nph.16996},
+  urldate = {2021-07-17},
+  abstract = {As climate change drives increased drought in many forested regions, mechanistic understanding of the factors conferring drought tolerance in trees is increasingly important. The dendrochronological record provides a window through which we can understand how tree size and traits shape growth responses to droughts. We analyzed tree-ring records for 12 species in a broadleaf deciduous forest in Virginia (USA) to test hypotheses for how tree height, microenvironment characteristics, and species’ traits shaped drought responses across the three strongest regional droughts over a 60-yr period. Drought tolerance (resistance, recovery, and resilience) decreased with tree height, which was strongly correlated with exposure to higher solar radiation and evaporative demand. The potentially greater rooting volume of larger trees did not confer a resistance advantage, but marginally increased recovery and resilience, in sites with low topographic wetness index. Drought tolerance was greater among species whose leaves lost turgor (wilted) at more negative water potentials and experienced less shrinkage upon desiccation. The tree-ring record reveals that tree height and leaf drought tolerance traits influenced growth responses during and after significant droughts in the meteorological record. As climate change-induced droughts intensify, tall trees with drought-sensitive leaves will be most vulnerable to immediate and longer-term growth reductions.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/nph.16996},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\7MLIJ4ML\\McGregor et al. - 2021 - Tree height and leaf drought tolerance traits shap.pdf;C\:\\Users\\Me\\Zotero\\storage\\EHTCSSE3\\nph.html},
+  keywords = {annual growth,crown exposure,drought,Forest Global Earth Observatory (ForestGEO),leaf drought tolerance traits,temperate broadleaf deciduous forest,tree height,tree-ring},
+  langid = {english},
+  number = {2}
+}
+
 @article{mcmahon_general_2015,
   title = {A General Model of Intra-Annual Tree Growth Using Dendrometer Bands},
   author = {McMahon, Sean M. and Parker, Geoffrey G.},
